Fixed: The bug with tweeting where a user cannot submit a tweet even the characters < 140, Fixed: The tweet box uses realtive times now, Fixed: empty If statement that was on the line 78. Tweet section was aligned with Compose Tweet. Code clean up was done as well

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -50,7 +50,7 @@ margin-right: 5%;
   color:black;
   border: solid grey 3px;
   padding: 10px;
-  margin: 10px; 
+  margin-bottom: 10px; 
 }
 
 .headers-footers-alignment{
